# synthaway

./: .gitignore  CMakeLists.txt  README.markdown  expand-synthesize.py  extract-xcodebuild-log.py  synthaway.cpp
tests/: add-underscore.m  auto-synthesis-disallowed.m  basic.m  block.m  compound-directive.m  explicit-ivar.m  identity.m  ivar-in-interface.m  linkedlist.m  mixed.m  name-collision.m  name-divergence.m  objcxx.mm  overridding-getter-setter.m  protocol-property.m  run-test.sh  type-divergence.m
